<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#673AB7"
    tools:context=".ejercicio5" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/eje5tit"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/eje5la1"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:translationX="10dp" />

            <EditText
                android:id="@+id/eje5in1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/eje5in1"
                android:inputType="number"
                android:textColor="#FFFFFF"
                android:translationX="100dp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/eje5la2"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:translationX="10dp" />

            <EditText
                android:id="@+id/eje5in2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/eje5in2"
                android:inputType="number|textPersonName"
                android:textColor="#FFFFFF"
                android:translationX="100dp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/eje5la3"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:translationX="10dp" />

            <EditText
                android:id="@+id/eje5in3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/eje5in3"
                android:inputType="number"
                android:textColor="#FFFFFF"
                android:translationX="100dp" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp" />

            <Button
                android:id="@+id/eje5btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/eje5btn"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:translationX="145dp"
                app:backgroundTint="#8BC34A" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/eje5res"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/eje5res"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:translationX="10dp" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>