<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9800"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-187dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/maintitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#FF9800"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/maintitle"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="404dp"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/maintitle">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/btneje1"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="clik"
                        android:text="@string/eje1"
                        app:backgroundTint="#FF9800" />

                    <Button
                        android:id="@+id/btneje2"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="clik"
                        android:text="@string/eje2"
                        app:backgroundTint="#FF9800" />

                    <Button
                        android:id="@+id/btneje3"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="clik"
                        android:text="@string/eje3"
                        app:backgroundTint="#FF9800" />

                    <Button
                        android:id="@+id/btneje4"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="clik"
                        android:text="@string/eje4"
                        app:backgroundTint="#FF9800" />

                    <Button
                        android:id="@+id/btneje5"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="clik"
                        android:text="@string/eje5"
                        app:backgroundTint="#FF9800" />

                </LinearLayout>
            </HorizontalScrollView>

            <Spinner
                android:id="@+id/spinnermain"
                android:layout_width="383dp"
                android:layout_height="40dp"
                android:layout_marginTop="72dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.489"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/maintitle" />

            <FrameLayout
                android:id="@+id/contenido"
                android:layout_width="410dp"
                android:layout_height="558dp"
                android:layout_marginTop="43dp"
                android:layout_marginBottom="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnermain">

            </FrameLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>